# youtube-analytics-project

./: config.py  pyproject.toml
homework-2/: moscowpython.json
src/: channel.py  playlist.py  video.py
