[tool.poetry]
name = "dz-13-1-2"
version = "0.1.0"
description = ""
authors = ["Maksim Toguzov <magadan499@mail.ru>"]
readme = "README.md"
packages = [{include = "dz_13"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
